--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				</div>
 				<img class="product-page__img" src="img/product2.png" alt="product">
 				<img class="product-page__img" src="img/product3.png" alt="product">
-				<div class="product-page__text text wow fadeInRight">
+				<div class="product-page__text text wow zoomInRight">
 					<p class="text__title">Контрольно-измерительный инструменты:</p>
 					<p class="text__txt">микрометры, скобы индикаторные, штангенглубомеры, стойки, штангенрейсмасы, нутрометры, меры длины, штангенциркули, индикаторы, калибры, кольца резьбовые, вставки гладкие и резьбовые, линейки, угольники.</p>
 				</div>
