--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<p class="product__title">Мы предлагаем предприятиям и частным лицам товары оптом и в розницу широкий ассортимент, более 3000 наименований:</p>
 
 			<div class="product-page">
-				<img class="product-page__img" src="img/product1.png" alt="product">
+				<img class="product-page__img wow zoomInRight" src="img/product1.png" alt="product">
 				<div class="product-page__text text">
 					<p class="text__title">Электротехническую продукцию:</p>
 					<p class="text__txt">электродвигатели, трансформаторы, пускатели магнитные, автоматические и кнопочные выключатели, амперметры, вольтметры, клеммы, клеммные блоки, кнопки управления, щётки МГ, вставки ПВД, предохранители, лампы, кабель и провод в ассортименте.</p>
@@ -168,9 +168,9 @@
 					<p class="text__title">Электроизоляционные материалы:</p>
 					<p class="text__txt">текстолит, эбонит, фторопласт, гетинакс, стеклотекстолит, капролон, трубы для электропроводки различного диаметра.</p>
 				</div>
-				<img class="product-page__img" src="img/product2.png" alt="product">
-				<img class="product-page__img" src="img/product3.png" alt="product">
-				<div class="product-page__text text wow zoomInRight">
+				<img class="product-page__img wow zoomInLeft" src="img/product2.png" alt="product">
+				<img class="product-page__img wow zoomInRight" src="img/product3.png" alt="product">
+				<div class="product-page__text text">
 					<p class="text__title">Контрольно-измерительный инструменты:</p>
 					<p class="text__txt">микрометры, скобы индикаторные, штангенглубомеры, стойки, штангенрейсмасы, нутрометры, меры длины, штангенциркули, индикаторы, калибры, кольца резьбовые, вставки гладкие и резьбовые, линейки, угольники.</p>
 				</div>
@@ -178,8 +178,8 @@
 					<p class="text__title">Режущие инструменты:</p>
 					<p class="text__txt">пилы круглые и ленточные для распиловки древесины и металла, фрезы деревообрабатывающие, резцы, ножи плоские для резки металла.</p>
 				</div>
-				<img class="product-page__img" src="img/product4.png" alt="product">
-				<img class="product-page__img" src="img/product5.png" alt="product">
+				<img class="product-page__img wow zoomInLeft" src="img/product4.png" alt="product">
+				<img class="product-page__img wow zoomInRight" src="img/product5.png" alt="product">
 				<div class="product-page__text text">
 					<p class="text__title">Резино-технические изделия:</p>
 					<p class="text__txt">ремни приводные, лента тормозная, рукава ПВХ, дюритовые, высокого давления различного назначения, резина техническая, пробки резиновые, трубки, шланги.</p>
