--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<div class="container">
 			<p class="discont-block__title">Оптовый склад-магазин предлагает накопительные скидки на любые покупки!</p>
 			<div class="mobil-disc">
-				<div class="discont-page wow fadeInLeft">
+				<div class="discont-page">
 					<div class="discont-page__disc-box">
 						<p>Размер<br>скидки</p>
 					</div>
@@ -95,7 +95,7 @@
 					</div>
 				</div>
 
-				<div class="discont-page wow fadeInRight">
+				<div class="discont-page">
 					<div class="discont-page__disc-box">
 						<p>Сумма покупок<br> за последние<br>6 месяцев</p>
 					</div>
