--- a/Flowers/mobile/basket.html
+++ b/Flowers/mobile/basket.html
@@ -13,7 +13,7 @@
 
 	<!-- slider -->
 	<link rel="stylesheet" href="../scss/library/slick.css">
-	<link rel="stylesheet" href="../scss/library/slick.theme.css">
+	<link rel="stylesheet" href="../scss/library/slick-theme.css">
 
 	<!-- main style -->
 	<link rel="stylesheet" href="scss/mobile-basket.css">
