--- a/new1/index.html
+++ b/new1/index.html
@@ -886,13 +886,13 @@
             <div class="right-actual">
               <p class="right-actual__title">Самая актуальная и полезная информация в Блоге</p>
 
-              <a href="#" class="right-actual__text">- Квартира или дом, плюсы и минусы будущей покупки</a>
-              <a href="#" class="right-actual__text">- На какого туриста стоит ориентироваться при покупки инвестиционной недвижимости в Черногории.</a>
-              <a href="#" class="right-actual__text">- Цены на недвижимость в Черногории продолжают рости</a>
-              <a href="#" class="right-actual__text">- Сколько стоит дом в Черногории 2019.</a>
-              <a href="#" class="right-actual__text">- Можно ли купить землю в Черногории за 60€?</a>
+              <a href="#" class="right-actual__text" target="_blank">- Квартира или дом, плюсы и минусы будущей покупки</a>
+              <a href="#" class="right-actual__text" target="_blank">- На какого туриста стоит ориентироваться при покупки инвестиционной недвижимости в Черногории.</a>
+              <a href="#" class="right-actual__text" target="_blank">- Цены на недвижимость в Черногории продолжают рости</a>
+              <a href="#" class="right-actual__text" target="_blank">- Сколько стоит дом в Черногории 2019.</a>
+              <a href="#" class="right-actual__text" target="_blank">- Можно ли купить землю в Черногории за 60€?</a>
 
-              <a href="https://plavamonika.com/category/novosti/" class="right-actual__link">Читать всё</a>
+              <a href="https://plavamonika.com/category/novosti/" class="right-actual__link" target="_blank">Читать всё</a>
             </div>
           </div>
 
