--- a/new1/index.html
+++ b/new1/index.html
@@ -12,12 +12,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- main style -->
+  <link rel="stylesheet" href="style/Animate.css">
   <link rel="stylesheet" href="style/slick.css">
   <link rel="stylesheet" href="style/slick-theme.css">
   <link rel="stylesheet" href="style/main.css">
   <link rel="stylesheet" href="style/media.css">
 
   <title>Plava Monica</title>
+
+  <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+
+    </script>
 </head>
 <body>
 
@@ -417,7 +424,7 @@
         <div class="row no-gutters">
           <div class="col-md-6 col-lg-3">
 
-            <div class="catigory-item">
+            <div class="catigory-item wow fadeInDown">
               <a href="#" class="catigory-item__title">Аппартаменты (+1286 в базе)</a>
 
               <div class="shadow-page">
@@ -444,7 +451,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
 
-            <div class="catigory-item">
+            <div class="catigory-item wow fadeInUp">
               <a href="#" class="catigory-item__title">Аппартаменты (+1286 в базе)</a>
 
               <div class="shadow-page">
@@ -471,7 +478,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
 
-            <div class="catigory-item">
+            <div class="catigory-item wow fadeInDown">
               <a href="#" class="catigory-item__title">Аппартаменты (+1286 в базе)</a>
 
               <div class="shadow-page">
@@ -498,7 +505,7 @@
           </div>
           <div class="col-md-6 col-lg-3">
 
-            <div class="catigory-item">
+            <div class="catigory-item wow fadeInUp">
               <a href="#" class="catigory-item__title">Аппартаменты (+1286 в базе)</a>
 
               <div class="shadow-page">
@@ -588,7 +595,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-12">
-          <p class="reason-title">5 причин выбрать Черногорию для проживания или инвестирования</p>
+          <p class="reason-title wow flipInX">5 причин выбрать Черногорию для проживания или инвестирования</p>
         </div>
 
         <div class="col-md-6 col-lg-4">
@@ -646,7 +653,7 @@
       <div class="row no-gutters">
         <div class="col-12 col-sm-6">
           <div class="txt-block">
-            <p class="txt-block__title">Наши преимущества </p>
+            <p class="txt-block__title wow flipInX">Наши преимущества </p>
             <p class="txt-block__text">Мы заботимся о наших клиентах. Нам не всё равно, какую недвижимость вы приобретёте. Мы готовы поделиться своим многолетним опытом работы в недвижимости, инвестирование, маркетинге.</p>
             <p class="txt-block__text"> С нами вы найдете для себя райский уголок для жизни или удачное и безопасное место для вложения денег.</p>
           </div>
@@ -789,38 +796,38 @@
         <div class="col-12">
 
           <div class="work-stages">
-            <p class="work-stages__title">Этапы работы с нами</p>
+            <p class="work-stages__title wow flipInX">Этапы работы с нами</p>
 
 
             <div class="stages-block">
-              <div class="stages-item">
+              <div class="stages-item wow lightSpeedIn">
                 <div class="img-block"><img src="img/number/1.png" alt=""></div>
                 <p class="stages-item__text">— Вы предоставляете нам информацию о недвижимости и запрос относительно объекта недвижимости; — Мы подбираем программой место по вашим предпочтениям и финансовым возможностям; — Даем рекомендации.</p>
                 <a href="javascript: void 0" class="stages-item__link" id="stagesLink1">Подробнее</a>
               </div>
-              <div class="stages-item">
+              <div class="stages-item wow lightSpeedIn">
                 <div class="img-block"><img src="img/number/2.png" alt=""></div>
                 <p class="stages-item__text"> — Приезжаете в Черногорию, осматриваете понравившуюся вам недвижимость; —  Воспользуйтесь нашей специальной программой.</p>
                 <a href="javascript: void 0" class="stages-item__link" id="stagesLink2">Подробнее</a>
               </div>
-              <div class="stages-item">
+              <div class="stages-item wow lightSpeedIn">
                 <div class="img-block"><img src="img/number/3.png" alt=""></div>
                 <p class="stages-item__text">— Делаем инвестиционную экспертную оценку выбранным объектам недвижимости относительно ваших целей; — Так же можно воспользоваться услугой отдельно. </p>
                 <a href="javascript: void 0" class="stages-item__link" id="stagesLink3">Подробнее</a>
               </div>
             </div>
             <div class="stages-block">
-              <div class="stages-item">
+              <div class="stages-item wow lightSpeedIn">
                 <div class="img-block"><img src="img/number/4.png" alt=""></div>
                 <p class="stages-item__text">— Проводим проверку документов; — Осуществляем подготовку договоров, следим за всеми тонкости и формальности купли/продажи недвижимости.</p>
                 <a href="javascript: void 0" class="stages-item__link" id="stagesLink4">Подробнее</a>
               </div>
-              <div class="stages-item">
+              <div class="stages-item wow lightSpeedIn">
                 <div class="img-block"><img src="img/number/5.png" alt=""></div>
                 <p class="stages-item__text">— Берем нашу недвижимость в управление; — Составляем и реализовываем маркетинг от сдачи в аренду; — Оформляем ВНЖплан для максимальной отдачи.  </p>
                 <a href="javascript: void 0" class="stages-item__link" id="stagesLink5">Подробнее</a>
               </div>
-              <div class="stages-item">
+              <div class="stages-item wow lightSpeedIn">
                 <div class="img-block"><img src="img/number/6.png" alt=""></div>
                 <p class="stages-item__text">— При продаже объекта составляем маркетинговую  «запаковку» объекта недвижимости; — Продвинем объект по маркетинговым каналам для максимально быстрой и выгодной продажи.</p>
                 <a href="javascript: void 0" class="stages-item__link" id="stagesLink6">Подробнее</a>
@@ -842,14 +849,14 @@
         <div class="col-12 col-xl-5">
           <div class="left-slider">
 
-            <p class="left-slider__title"></p>
+            <p class="left-slider__title wow flipInX">Получайте доход от покупки недвижимости</p>
 
-            <p class="left-slider__text">Покупка недвижимости относиться к долгосрочным вложениям.</p>
-            <p class="left-slider__text">Покупая инвестиционную недвижимость нет смысла рассчитывать сроки</p>
-            <p class="left-slider__text">рассчитывать сроки ее продать, поэтому прибыль от сдачи</p>
-            <p class="left-slider__text">недвижимости в аренду вы сможете получать практически сразу.</p>
+            <p class="left-slider__text wow zoomIn">Покупка недвижимости относиться к долгосрочным вложениям.</p>
+            <p class="left-slider__text wow zoomIn">Покупая инвестиционную недвижимость нет смысла рассчитывать сроки</p>
+            <p class="left-slider__text wow zoomIn">рассчитывать сроки ее продать, поэтому прибыль от сдачи</p>
+            <p class="left-slider__text wow zoomIn">недвижимости в аренду вы сможете получать практически сразу.</p>
 
-            <a href="javascript: void 0" class="left-slider__link" id="leftsl">Скачать ещё</a>
+            <a href="javascript: void 0" class="left-slider__link wow zoomIn" id="leftsl">Скачать ещё</a>
           </div>
         </div>
         <div class="col-12 col-xl-7">
@@ -884,15 +891,15 @@
             </div>
 
             <div class="right-actual">
-              <p class="right-actual__title">Самая актуальная и полезная информация в Блоге</p>
+              <p class="right-actual__title wow flipInX">Самая актуальная и полезная информация в Блоге</p>
 
-              <a href="#" class="right-actual__text" target="_blank">- Квартира или дом, плюсы и минусы будущей покупки</a>
-              <a href="#" class="right-actual__text" target="_blank">- На какого туриста стоит ориентироваться при покупки инвестиционной недвижимости в Черногории.</a>
-              <a href="#" class="right-actual__text" target="_blank">- Цены на недвижимость в Черногории продолжают рости</a>
-              <a href="#" class="right-actual__text" target="_blank">- Сколько стоит дом в Черногории 2019.</a>
-              <a href="#" class="right-actual__text" target="_blank">- Можно ли купить землю в Черногории за 60€?</a>
+              <a href="#" class="right-actual__text wow zoomIn" target="_blank">- Квартира или дом, плюсы и минусы будущей покупки</a>
+              <a href="#" class="right-actual__text wow zoomIn" target="_blank">- На какого туриста стоит ориентироваться при покупки инвестиционной недвижимости в Черногории.</a>
+              <a href="#" class="right-actual__text wow zoomIn" target="_blank">- Цены на недвижимость в Черногории продолжают рости</a>
+              <a href="#" class="right-actual__text wow zoomIn" target="_blank">- Сколько стоит дом в Черногории 2019.</a>
+              <a href="#" class="right-actual__text wow zoomIn" target="_blank">- Можно ли купить землю в Черногории за 60€?</a>
 
-              <a href="https://plavamonika.com/category/novosti/" class="right-actual__link" target="_blank">Читать всё</a>
+              <a href="https://plavamonika.com/category/novosti/" class="right-actual__link wow zoomIn" target="_blank">Читать всё</a>
             </div>
           </div>
 
@@ -907,12 +914,12 @@
         <div class="col-12">
           <div class="partnership-contant">
             <div class="title-block">
-              <p class="title-block__title">Партнерские программы и наши услуги</p>
+              <p class="title-block__title wow flipInX">Партнерские программы и наши услуги</p>
               <img src="img/partner-arrow.png" alt="">
               <a href="services.html#s8" class="title-block__link" target="_blank">Тур за недвижимостью</a>
             </div>
 
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block one"><img src="img/partnership1.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Деньги под залог на покупку</p>
@@ -920,7 +927,7 @@
               </div>
               <a href="services.html#btnK1" class="partnership-item__link" target="_blank">Узнать больше</a>
             </div>
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block two"><img src="img/partnership2.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Инвестиционная оценка недвижимости </p>
@@ -928,7 +935,7 @@
               </div>
               <a href="services.html#btnK2" class="partnership-item__link" target="_blank">Узнать больше</a>
             </div>
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block three"><img src="img/partnership3.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Бизнес & иммиграция в Черногорию</p>
@@ -936,7 +943,7 @@
               </div>
               <a href="services.html#btnK3" class="partnership-item__link" target="_blank">Узнать больше</a>
             </div>
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block four"><img src="img/partnership4.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Строительство и подряд</p>
@@ -944,7 +951,7 @@
               </div>
               <a href="services.html#btnK4" class="partnership-item__link" target="_blank">Узнать больше</a>
             </div>
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block five"><img src="img/partnership5.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Управление объектом недвижимости</p>
@@ -952,7 +959,7 @@
               </div>
               <a href="services.html#btnK5" class="partnership-item__link" target="_blank">Узнать больше</a>
             </div>
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block six"><img src="img/partnership6.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Умная продажа</p>
@@ -960,7 +967,7 @@
               </div>
               <a href="services.html#btnK6" class="partnership-item__link" target="_blank">Узнать больше</a>
             </div>
-            <div class="partnership-item">
+            <div class="partnership-item wow zoomIn">
               <div class="img-block seven"><img src="img/partnership7.png" alt=""></div>
               <div class="block-text">
                 <p class="block-text__title">Стартапы, открытие, ведение и сопровождение бизнеса на Балканах</p>
@@ -995,7 +1002,7 @@
       <div class="row no-gutters">
         <div class="col-12">
           <div class="question-block">
-            <p class="question-block__title">Топ самых популярных вопросов</p>
+            <p class="question-block__title wow flipInX">Топ самых популярных вопросов</p>
 
             <div class="question-item">
               <input id="acc_check1" type="checkbox"/>
@@ -1055,7 +1062,7 @@
         </div>
         <div class="col-md-12 col-lg-7">
           <div class="right-info">
-            <p class="right-info__title">Самая актуальная и необходимая информация о Черногории</p>
+            <p class="right-info__title wow flipInX">Самая актуальная и необходимая информация о Черногории</p>
             <div class="img-right">
               <img src="img/info-img.png" alt="">
               <img src="img/info-arrow.png" alt="" class="info-arrow">
@@ -1069,7 +1076,7 @@
     </div>
   </div>
 
-  <a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
+  <a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
 
   <footer class="footer">
     <div class="container">
