--- a/new1/services.html
+++ b/new1/services.html
@@ -12,12 +12,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- main style -->
+  <link rel="stylesheet" href="style/Animate.css">
   <link rel="stylesheet" href="style/slick.css">
   <link rel="stylesheet" href="style/slick-theme.css">
   <link rel="stylesheet" href="style/main.css">
   <link rel="stylesheet" href="style/media.css">
 
   <title>Plava Monica</title>
+
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+
+  </script>
 </head>
 <body>
 
@@ -274,15 +281,15 @@
     <div class="row no-gutters">
       <div class="col-12">
         <div class="link-content">
-          <a href="#s1" class="link-content__link">Деньги под залог на покупку недвижимости в Черногории</a>
-          <a href="#s2" class="link-content__link">Инвестиционная оценка недвижимости</a>
-          <a href="#s3" class="link-content__link">Бизнес & иммиграция в Черногорию</a>
-          <a href="#s4" class="link-content__link">Строительство и подряд</a>
-          <a href="#s5" class="link-content__link">Управление объектом недвижимости</a>
-          <a href="#s6" class="link-content__link">Умная продажа недвижимости</a>
-          <a href="#s7" class="link-content__link">Открытие, ведение, сопровождение бизнеса, стартапы на Балканах</a>
-          <a href="#s8" class="link-content__link">Тур за недвижимостью</a>
-          <a href="#s9" class="link-content__link">Последовательность покупки недвижимость в Черногории</a>
+          <a href="#s1" class="link-content__link wow fadeInRight">Деньги под залог на покупку недвижимости в Черногории</a>
+          <a href="#s2" class="link-content__link wow fadeInLeft">Инвестиционная оценка недвижимости</a>
+          <a href="#s3" class="link-content__link wow fadeInRight">Бизнес & иммиграция в Черногорию</a>
+          <a href="#s4" class="link-content__link wow fadeInLeft">Строительство и подряд</a>
+          <a href="#s5" class="link-content__link wow fadeInRight">Управление объектом недвижимости</a>
+          <a href="#s6" class="link-content__link wow fadeInLeft">Умная продажа недвижимости</a>
+          <a href="#s7" class="link-content__link wow fadeInRight">Открытие, ведение, сопровождение бизнеса, стартапы на Балканах</a>
+          <a href="#s8" class="link-content__link wow fadeInLeft">Тур за недвижимостью</a>
+          <a href="#s9" class="link-content__link wow fadeInRight">Последовательность покупки недвижимость в Черногории</a>
         </div>
       </div>
     </div>
@@ -296,7 +303,7 @@
         <div class="three-services-content">
 
           <div class="left-block" id="btnK1">
-            <p class="left-block__title">Деньги под залог на покупку недвижимости в Черногории</p>
+            <p class="left-block__title wow slideInUp">Деньги под залог на покупку недвижимости в Черногории</p>
             <p class="left-block__text pl">Теперь ипотечное кредитование возможно и для зарубежной недвижимости. Вам доступно до 20 000 евро от 9% годовых для покупки понравившейся вам недвижимости. Денежные средства выдаются под залог квартиры , находящейся на территории Российской Федерации. Покупка приморской недвижимости даёт возможность частично гасить залоговые средства, взятые у банка, за счёт сдачи её в аренду. Залог выдается сроком до 15 лет на дебетовую карту банком-партнером АО «Тинькофф Банк».</p>
 
             <p class="left-block__subtitle">Кредит под залог недвижимости</p>
@@ -337,11 +344,11 @@
 
             <div class="right-actual services">
 
-              <a href="#" class="right-actual__text">- Квартира или дом, плюсы и минусы будущей покупки</a>
-              <a href="#" class="right-actual__text">- На какого туриста стоит ориентироваться при покупки инвестиционной недвижимости в Черногории.</a>
-              <a href="#" class="right-actual__text">- Цены на недвижимость в Черногории продолжают рости</a>
-              <a href="#" class="right-actual__text">- Сколько стоит дом в Черногории 2019.</a>
-              <a href="#" class="right-actual__text">- Можно ли купить землю в Черногории за 60€?</a>
+              <a href="#" class="right-actual__text" target="_blank">- Квартира или дом, плюсы и минусы будущей покупки</a>
+              <a href="#" class="right-actual__text" target="_blank">- На какого туриста стоит ориентироваться при покупки инвестиционной недвижимости в Черногории.</a>
+              <a href="#" class="right-actual__text" target="_blank">- Цены на недвижимость в Черногории продолжают рости</a>
+              <a href="#" class="right-actual__text" target="_blank">- Сколько стоит дом в Черногории 2019.</a>
+              <a href="#" class="right-actual__text" target="_blank">- Можно ли купить землю в Черногории за 60€?</a>
             </div>
           </div>
         </div>
@@ -357,7 +364,7 @@
         <div class="three-services-content">
 
           <div class="left-block" id="btnK2">
-            <p class="left-block__title">Инвестиционная оценка недвижимости</p>
+            <p class="left-block__title wow slideInUp">Инвестиционная оценка недвижимости</p>
             <p class="left-block__text pl">Существует множество факторов, влияющих на стоимость и инвестиционную привлекательность недвижимости.</p>
 
             <p class="left-block__subtitle">Оценка недвижимости проводится по следующим показателям:</p>
@@ -537,7 +544,7 @@
       <div class="col-12">
         <div class="price-content">
 
-          <p class="price-content__title">Стоимость услуги :</p>
+          <p class="price-content__title wow slideInUp">Стоимость услуги :</p>
 
           <div class="price-page">
             <div class="price-item">
@@ -943,7 +950,7 @@
         <div class="business-content">
           <div class="bus-block" id="btnK3">
             <div class="bus-left">
-              <p class="business-content__title">Бизнес & иммиграция в Черногорию</p>
+              <p class="business-content__title wow slideInUp">Бизнес & иммиграция в Черногорию</p>
               <p class="business-content__text">- Оформление ВНЖ</p>
               <p class="business-content__text">- Регистрация/ликвидация компаний и изменения в уставных документах</p>
               <p class="business-content__text">- Нострификация документов об образовании</p>
@@ -978,7 +985,7 @@
 
           <div class="bus-block"  id="s4">
             <div class="bus-left" id="btnK4">
-              <p class="business-content__title">Строительство и подряд</p>
+              <p class="business-content__title wow slideInUp">Строительство и подряд</p>
               <p class="business-content__text left">Квалифицированный подрядчик на рынке международного строительства.  Быстро и качественно в соответствии с нормами и стандартами строительства в Черногории «под ключ» </p>
               <p class="business-content__text">- информационное моделирование зданий</p>
               <p class="business-content__text">- строительные услуги</p>
@@ -994,7 +1001,7 @@
 
           <div class="bus-block"  id="s5">
             <div class="bus-left" id="btnK5">
-              <p class="business-content__title">Управление объектом недвижимости</p>
+              <p class="business-content__title wow slideInUp">Управление объектом недвижимости</p>
 
               <p class="business-content__subtitle">Цель - максимизация доходов.</p>
               <p class="business-content__text">- Учёт и полная отчётность;</p>
@@ -1018,7 +1025,7 @@
 
           <div class="bus-block" id="s6">
             <div class="bus-left"  id="btnK6">
-              <p class="business-content__title">Умная продажа недвижимости</p>
+              <p class="business-content__title wow slideInUp">Умная продажа недвижимости</p>
 
               <p class="business-content__subtitle">Цель  - максимально ускорить продажу объекта</p>
               <p class="business-content__text">- Маркетинговая «упаковка» объекта (фото, видео, расширенное описание)</p>
@@ -1028,7 +1035,7 @@
               <p class="business-content__text">- продвижение объекта недвижимости по закрытым риэлтерским каналам.</p>
 
               <div class="page-link">
-                <p class="page-link__title">Стоимость услуги :</p>
+                <p class="page-link__title wow slideInUp">Стоимость услуги :</p>
                 <div class="left-page">
                   <p class="left-page__text">«Умная продажа» для объектов, приобретенных через DOO Plava Monika</p>
                   <a href="javascript: void 0" class="right-page__link" id="btn4">от 200 евро</a>
@@ -1046,7 +1053,7 @@
             </div>
           </div>
 
-          <p class="business-content__title" id="s7">Открытие, ведение, сопровождение бизнеса, стартапы на Балканах</p>
+          <p class="business-content__title wow slideInUp" id="s7">Открытие, ведение, сопровождение бизнеса, стартапы на Балканах</p>
           <p class="business-content__text">- регистрация компании</p>
           <p class="business-content__text">- открытие банковских счетов</p>
           <p class="business-content__text">- маркетинговые исследования</p>
@@ -1065,7 +1072,7 @@
 
           <div class="bus-block" id="s8">
             <div class="bus-left">
-              <p class="business-content__title">Тур за недвижимостью.</p>
+              <p class="business-content__title wow slideInUp">Тур за недвижимостью.</p>
               <p class="business-content__text">- Двухдневная ознакомительная программа включает:</p>
               <p class="business-content__text">- Проживание в комфортабельных апартаментах с одной спальней на два лица (2 ночи)</p>
               <p class="business-content__text">- Экскурсию по Lustica Вау, включая осмотр объектов курорта</p>
@@ -1089,7 +1096,7 @@
             </div>
           </div>
 
-          <p class="business-content__title" id="s9">Последовательность покупки недвижимость в Черногории</p>
+          <p class="business-content__title wow slideInUp" id="s9">Последовательность покупки недвижимость в Черногории</p>
           <p class="business-content__text wleft">Иностранцам разрешается покупать жилую недвижимость в Черногории без ограничений – на юридическое или на физическое лицо. В Черногории сделки с недвижимостью проводятся у нотариуса, в присутствии покупателя и продавца и судебного переводчика.</p>
           <p class="business-content__subtitle">Процедура приобретения недвижимости в Черногории:</p>
 
@@ -1175,7 +1182,7 @@
 </div>
 
 
-<a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
+<a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
 
 <footer class="footer">
   <div class="container">
