--- a/new1/index.html
+++ b/new1/index.html
@@ -1076,7 +1076,7 @@
     </div>
   </div>
 
-  <a href="#top" class="top-scroll"><img src="/img/top-scroll.png" alt=""></a>
+  <a href="#top" class="top-scroll"><img src="img/top-scroll.png" alt=""></a>
 
   <footer class="footer">
     <div class="container">
