--- a/new1/services.html
+++ b/new1/services.html
@@ -271,7 +271,7 @@
 
 <div class="bg-block">
   <div class="container">
-    <img src="/img/services.png" alt="">
+    <img src="img/services.png" alt="">
     <p class="str-title">Услуги</p>
   </div>
 </div>
